--- a/Civil War.html
+++ b/Civil War.html
@@ -16,11 +16,21 @@
 </p>
 <br><hr><br>
 <p align=center>
-	<img src=https://media.discordapp.net/attachments/993822818296934422/1165382504920920207/Home.png?ex=6546a608&is=65343108&hm=8018d6b1a6fa3e6eebf7d76b2de384ca0cada61ad88557074214b5530b9dd4e4&=&width=539&height=179 width="250"height="100"> 
-	<img src=https://media.discordapp.net/attachments/993822818296934422/1165382505747206275/Personalities.png?ex=6546a609&is=65343109&hm=f5b27d7d46957b9fefaf7f55df3e746c2fdc604f334ddc9e88b1f92cd0d1caaa&=&width=539&height=179 width="250"height="100">
-	<img src=https://media.discordapp.net/attachments/993822818296934422/1165382504610533416/Combatants.png?ex=6546a608&is=65343108&hm=3a51839d003ea1d712062b0f8f12b4f813068e342e8526ec53929d552cda977c&=&width=539&height=179 width="280"height="120">
-	<img src=https://media.discordapp.net/attachments/993822818296934422/1165382505168392333/Information.png?ex=6546a608&is=65343108&hm=dfaa7159065a16d867cbfaad076321af89771bac39aed8a2c00827a7b21d5af2&=&width=539&height=179 width="250"height="100">
-<img src=https://media.discordapp.net/attachments/993822818296934422/1165382505453596712/Others.png?ex=6546a609&is=65343109&hm=dda3946509cf982eddd0592b48d72adf44e80af080668e5544f0e37d677afb7c&=&width=539&height=179 width="250"height="100">
+	<a href=/>
+		<img src=https://media.discordapp.net/attachments/993822818296934422/1165382504920920207/Home.png?ex=6546a608&is=65343108&hm=8018d6b1a6fa3e6eebf7d76b2de384ca0cada61ad88557074214b5530b9dd4e4&=&width=539&height=179 width="250"height="100">
+	</a>
+	<a href=> 
+		<img src=https://media.discordapp.net/attachments/993822818296934422/1165382505747206275/Personalities.png?ex=6546a609&is=65343109&hm=f5b27d7d46957b9fefaf7f55df3e746c2fdc604f334ddc9e88b1f92cd0d1caaa&=&width=539&height=179 width="250"height="100">
+	</a>
+	<a href=>
+		<img src=https://media.discordapp.net/attachments/993822818296934422/1165382504610533416/Combatants.png?ex=6546a608&is=65343108&hm=3a51839d003ea1d712062b0f8f12b4f813068e342e8526ec53929d552cda977c&=&width=539&height=179 width="280"height="120">
+	</a>
+	<a href=>
+		<img src=https://media.discordapp.net/attachments/993822818296934422/1165382505168392333/Information.png?ex=6546a608&is=65343108&hm=dfaa7159065a16d867cbfaad076321af89771bac39aed8a2c00827a7b21d5af2&=&width=539&height=179 width="250"height="100">
+	</a>
+	<a href=>
+		<img src=https://media.discordapp.net/attachments/993822818296934422/1165382505453596712/Others.png?ex=6546a609&is=65343109&hm=dda3946509cf982eddd0592b48d72adf44e80af080668e5544f0e37d677afb7c&=&width=539&height=179 width="250"height="100">
+	</a>
 </p>
 <br>
 <hr>
